Resolved some styles and layout problems and IE9 bug

--- a/client/css/master.css
+++ b/client/css/master.css
@@ -1306,10 +1306,10 @@ ul.controlOptions li:active {
 }
 
 /* impromptu starts here*/
-.popup {
+div.popup {
   width: auto;
   font-family: Verdana, Geneva, Arial, Helvetica, sans-serif; 
-  position: absolute; 
+  position: fixed!important; 
   background-color: #222; 
   font-size: 11px; 
   text-align: left; 
@@ -1317,12 +1317,22 @@ ul.controlOptions li:active {
   padding: 7px;
   max-width: 75%;
   max-height: 80%;
-  min-width: 10%;
-  overflow-x:auto;
+  min-width: 15%;
 }
 
+div.popup-ie9{
+  width: 515px;
+}
 
-.popup h2 {
+div.popup input[type="text"]{
+  width: 100%;
+}
+
+div.popup .cdf_settings_input{
+  width: 100%;
+}
+
+div.popup h2 {
   float: left;
   color: #12a2d8;
   line-height: 20px;
@@ -1336,8 +1346,7 @@ div.popup .popupcontainer{
   font-weight: bold;
   background: #222; 
 }
-div.popup .popupclose{ 
-  float: right;
+div.popup .popupclose{
   font-weight: bold;
   border: 2px solid #12a2d8;
   height: 20px;
@@ -1346,6 +1355,8 @@ div.popup .popupclose{
   background: url(../images/close.png);
   z-index: 100;
   color: transparent;
+  position: absolute;
+  right: 8px;
 }
 div.popup .popupclose:hover{ 
   color: transparent;
@@ -1376,8 +1387,11 @@ div.popup button{
   border: solid 2px #12a2d8; 
   color: #999; 
   font-size: 12px; 
+  margin-left: 5px;
+  position: relative;
+  right: 0;
+  margin-bottom: 0;
   float: right;
-  margin-left: 5px; 
 }
 div.popup button:hover{ 
   background-color: #12a2d8!important;
@@ -1412,7 +1426,7 @@ div.popup button.popupdefaultbutton{
   background-color: #12a2d8;
 }
 
-.popup .title {
+div.popup .title {
   font-weight: bold;
   display: block;
   width: 100%; 
@@ -1421,7 +1435,7 @@ div.popup button.popupdefaultbutton{
   font-size: 13px;
 }
 
-.popup img {
+div.popup img {
   margin-left: 10px;  
 }
 
@@ -1434,7 +1448,7 @@ div.popup button.popupdefaultbutton{
 
 }
 
-.popup textarea {
+div.popup textarea {
   width: 100%;  
   height: 75px;
   box-sizing: border-box;
@@ -1443,7 +1457,7 @@ div.popup button.popupdefaultbutton{
   resize: none;
 }
 
-.popup .button {
+div.popup .button {
   width: 75px;
   border: 2px #12a2d8 solid;
   float: right;
@@ -1453,16 +1467,16 @@ div.popup button.popupdefaultbutton{
   right: 10px;
 }
 
-.popup .button:hover {
+div.popup .button:hover {
   background: #12a2d8;
   color: #222;
   cursor: pointer;
 }
 
-.popup .button:active {
+div.popup .button:active {
   color: #fff;
-}
 
+}
 #popupSave {
   width: 600px;
   margin-left: -300px;
