--- a/client/css/stringlist.css
+++ b/client/css/stringlist.css
@@ -111,7 +111,7 @@ div.jqiParameterList {
 	width: 60px;
 }
 .StringListArgs .StringListText {
-	width: 160px;
+	width: 160px!important;
 }
 /* rest */
 .GenericSelectValues {
@@ -138,7 +138,7 @@ div.jqiParameterList {
 
 .StringListVal .StringListText{
 	float: left;
-	width: 250px;
+	width: 250px!important;
 }
 
 .StringListParameter, .StringListRemove, .StringArrayParameter, .StringArrayRemove,
@@ -199,7 +199,7 @@ ul.StringListParameter li div, ul.GenericSelectParameter li div, ul.ParameterLis
 	width:160px;
 }
 .StringArrayText{
-	width: 120px;
+	width: 120px!important;
 }
 
 /*.StringListArgs, .StringArrayArgs, .ParameterListArgs {
